--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Minecraft Pitch Bend 計算ツール</title>
+<title>Minecraft Playsound 計算ツール</title>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Minecraft Pitch Bend 計算ツール</h1>
+    <h1>Minecraft Playsound 計算ツール</h1>
 
     <label for="playsound">基準値 (playsound base):</label>
     <input type="number" id="playsound" step="any" placeholder="例: 1.0" />
