--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <h2>履歴（最大10件）</h2>
     <ul id="history" class="history-list"></ul>
   </div>
+  <footer>
+        <p><a href="https://x.com/sssshimody/status/1442443902091505666" target="_blank">しもでぃ様のplaysoundの数値リスト</a></p>
+        <p><a href="https://www.youtube.com/@io_Minecraft_music" target="_blank">Youtube</a></p>
+        <p>
+        </a>
+   </footer>
 
   <script src="script.js"></script>
 </body>
