--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <script src="script.js"></script>
   
-   <footer>
+   <footer class="footer">
         <p><a href="https://x.com/sssshimody/status/1442443902091505666" target="_blank">しもでぃ様のplaysoundの数値リスト</a></p>
         <p><a href="https://www.youtube.com/@io_Minecraft_music" target="_blank">Youtube</a></p>
 </body>
