--- a/index.html
+++ b/index.html
@@ -26,18 +26,9 @@
   </div>
   <script src="script.js"></script>
   
-   <footer class="footer">
-    <p>
-      <a href="https://x.com/sssshimody/status/1442443902091505666" target="_blank">
-        しもでぃ様のplaysoundの数値リスト
-      </a>
-      ｜ 
-      <a href="https://www.youtube.com/@io_Minecraft_music" target="_blank">
-        Youtube
-      </a>
-      ｜ 
-      <a href="https://www.youtube.com/watch?v=gJOoDMFZcy4" target="_blank">
-        このサイトの利用方法
-    </p>
-  </footer>
-</body>
+<footer class="footer">
+  <p><a href="https://x.com/sssshimody/status/1442443902091505666" target="_blank">しもでぃ様のplaysoundの数値リスト</a></p>
+  <p><a href="https://www.youtube.com/@io_Minecraft_music" target="_blank">Youtube</a></p>
+  <p><a href="https://www.youtube.com/watch?v=gJOoDMFZcy4" target="_blank">このサイトの利用方法</a></p>
+  <p><a href="https://x.com/ionoteblock" target="_blank">私のTwitter 何かあれば気軽に聞いてください</a></p>
+</footer>
