--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
   <p><a href="https://www.youtube.com/@io_Minecraft_music" target="_blank">Youtube</a></p>
   <p><a href="https://www.youtube.com/watch?v=gJOoDMFZcy4" target="_blank">このサイトの利用方法</a></p>
   <p><a href="https://x.com/ionoteblock" target="_blank">私のTwitter 何かあれば気軽に聞いてください</a></p>
-  <p><a href="https://ioldtype.github.io/Minecraft-playsound-pitchbend-1.12/" target="_blank">1.12の場合はこちらから</a></p>
+  <p><a href="https://ioldtype.github.io/Minecraft-playsound-pitchbend-1.12/" target="_blank">バージョン1.12の場合はこちらから</a></p>
 </footer>
